--- a/Matcha/index.html
+++ b/Matcha/index.html
@@ -164,11 +164,13 @@
         But you don’t have hours to create content that may or may not work. 
         With Matcha, instantly publish from our library of 10,000+ professionally written articles and build your email list faster with our powerful conversion tool.
     </p>
-    <form action="">
+   
+    <!-- Submit para respnder el botón. -->
+    <form class="signup-form">
         <p>Start publishing today:</p>
         <div>
-            <input type="text" placeholder="Enter email">
-            <button>Start My Trial</button>
+            <input type="email" placeholder="Enter email" required>
+            <button type="submit">Start My Trial</button>
         </div>
     </form>
 </article>
@@ -310,6 +312,7 @@
     crossorigin="anonymous"
   ></script>
 
+<script src="./app.js"></script>
 
 </body>
 </html>
